# BoolExprNet

./: .gitignore  .gitmodules  BoolExprNet.sln  Directory.Build.props  appveyor.yml
BoolExprNet/: Atom.cs  BoolExprNet.csproj  DfsIter.cs  EqualOperator.cs  Expression.cs  Literal.cs  NegativeOperator.cs  NotIfThenElse.cs  OneLiteral.cs  Point.cs  UnequalOperator.cs  ZeroLiteral.cs
BoolExprNet.Console/: Program.cs
BoolExprNet.Tests/: BoolExprNet.Tests.csproj  ExpressionTests.cs
BoolExprNet/Internal/: _CofactorIter.cs  _VarSetIter.cs
boolexpr32/: CMakeLists.txt
boolexpr64/: CMakeLists.txt
libboolexpr/: libboolexpr.vcxproj
src/: BoolExprNet.native.proj  BoolExprNet.sln
src/BoolExpr/: AndOperator.cs  Atom.cs  BoolExpr.csproj  BoolExprNet.csproj  CofactorIter.cs  Complement.cs  Constant.cs  Context.cs  EqualOperator.cs  Expression.cs  IfThenElse.cs  Illogical.cs  Implies.cs  Kind.cs  Known.cs  LatticeOperator.cs  Literal.cs  Logical.cs  ManagedRef.cs  NandOperator.cs  Native.cs  NegativeOperator.cs  NorOperator.cs  NotIfThenElse.cs  NotImpliesOperator.cs  OneLiteral.cs  Operator.cs  OrOperator.cs  Point.cs  UnequalOperator.cs  Unknown.cs  VarSet.cs  Variable.cs  Vec.cs  XnorOperator.cs  XorOperator.cs  ZeroLiteral.cs
src/BoolExpr.Console/: BoolExpr.Console.csproj  Program.cs
src/BoolExprNet/: BoolExprNet.csproj  Constant.cs  Context.cs  DomainIter.cs  Expression.cs  Illogical.cs  Kind.cs  Known.cs  (+4 more)
src/BoolExprNet.Console/: BoolExprNet.Console.csproj
src/BoolExprNet.Tests/: BoolExprNet.Tests.csproj  ExpressionTests.cs
src/boolexpr32/: CMakeLists.txt
(+22 files in other folders)
